Added Lua Talker entity Runs code when interacted with
Refactored cutscene_helper to be more generic for cutscenes/talkers
Makes it easier to load Lua code for any purpose

Added warmup to cutscene loading, might need more tweaking

--- a/LuaCutscenes.csproj
+++ b/LuaCutscenes.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\LuaTalker.cs" />
     <Compile Include="LuaCutscenesMod.cs" />
     <Compile Include="Entities\LuaCutsceneEntity.cs" />
     <Compile Include="Triggers\LuaCutsceneTrigger.cs" />
