Add ChoicePrompt and helpers.choice

--- a/LuaCutscenes.csproj
+++ b/LuaCutscenes.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Entities\LuaTalker.cs" />
     <Compile Include="LuaCutscenesMod.cs" />
     <Compile Include="Entities\LuaCutsceneEntity.cs" />
+    <Compile Include="Entities\ChoicePrompt.cs" />
     <Compile Include="Triggers\LuaCutsceneTrigger.cs" />
     <Compile Include="Helpers\LuaHelper.cs" />
     <Compile Include="Helpers\MethodWrappers.cs" />
